--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.2
   provider: ^6.1.2
   get_it: ^7.7.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
