--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   get_it: ^7.7.0
   google_nav_bar: ^5.0.6
+  video_player: ^2.8.6
 
 dev_dependencies:
   flutter_test:
