--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   get_it: ^7.7.0
   google_nav_bar: ^5.0.6
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - lib/assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
