--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^7.7.0
   google_nav_bar: ^5.0.6
   carousel_slider: ^4.2.1
+  widget_zoom: ^0.0.4
 
 dev_dependencies:
   flutter_test:
