--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - lib/assets/
+    - lib/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
