--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   carousel_slider: ^4.2.1
   widget_zoom: ^0.0.4
+  flutter_dotenv:
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +57,7 @@ flutter:
   uses-material-design: true
   assets:
     - lib/images/
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
